assets/css/main.css
@import "../fonts/Raleway-Regular.ttf";
@import "../fonts/Raleway-Medium.ttf";
@import "../fonts/Raleway-SemiBold.ttf";
@import "../fonts/Lato-Regular.ttf";
@import "../fonts/Lato-Bold.ttf";
@import "../fonts/Lato-Italic.ttf";
@import "../fonts/Lato-Light.ttf";

body {
  font-family: 'Lato', Helvetica, sans-serif;
  height: 100%;
  width: 100%;
  position: absolute;
}

.logo {
  font-family: 'Raleway', Helvetica, san-serif;
  color: #0064cd;
}

.node {
  cursor: pointer;
}

.node circle {
  fill: #3498db;
  stroke: #3498db;
  stroke-width: 1px;
  r: 5;
}

.node circle.analyzed {
  fill: #98db34;
  stroke: #98db34;
}

.node circle.attention {
  fill: #db3445;
  stroke: #db3445;
}

.node circle.original {
  fill: #a73b8f;
  stroke: #a73b8f;
}

.node.file text {
  font: 13px sans-serif;
  fill: white;
}

.node.dir text {
  fill: black;
}

.clues rect {
  x: 0;
  y: -10;
  height: 20px;
  rx: 4;
  ry:4;
  stroke-width:3
}

.clue-filename rect {
  fill: gray;
  stroke: gray;
}

.clue-license rect {
  fill: #3984b6;
  stroke: #3984b6;
}

.clue-copyright rect {
  fill: #1d2e81;
  stroke: #1d2e81;
}

.svg-container{
  border: 1px solid #ddd;
  border-radius: 4px;
  margin-top: 5px;
  position: absolute;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.nodeview-content {
  display: inline-block;
  position: absolute;
  top: 0;
  left: 0;
}

div.node-content {
  border: 1px solid #ddd;
  width: 200px;
}

#zoom-controls {
  top: 15px;
  left: 10px;
  z-index: 10;
  width: auto;
  position: absolute;
}

#nodeview-container {
  position: relative;
  height: 100%;
  width: 100%;
}

#recenter { color: #fff; }

.btn-zoom {
  color: #fff;
  background-color: #3498db;
}

.btn-zoom:hover {
  color: #fff;
  background-color: rgba(52,152,219, 0.9);
  border-color: #269abc;
}

.fa-refresh-scale {
  font-size: 18px;
}

.link {
  fill: none;
  stroke: #ccc;
  stroke-width: 2px;
}

.hide-container { display: none; }

/* select2 custom css */
.select2-container {
  width: 100% !important;
  padding: 0;
}

.modal-header {
  word-wrap: break-word;
}

#jstree {
  border: 1px solid #ddd;
  border-radius: 4px;
  overflow-x: scroll;
  overflow-y: scroll;
  height: 100%;
  padding-top: 15px;
  background-color: #f9f9f9;
}

.jstree-default .jstree-clicked {
    background: rgba(158,158,158, 0.50);
}

.node-btn-group {
  padding: 0 0 0 10px;
}

/*////// Sidebar //////*/

#root-div, #clues-container, #node-container, #component-container {
  height: 100%;
  width: 100%;
}

#tabbar  {
  height: 100%;
  padding-top: 10px;
}

#leftCol {
  height: 100%;
  margin-left: 50px;
}

.btn-sidebar {
  color: grey;
  background-color: #000;
  padding: 0;
  width: 50px;
}

.sidebar-nav li .btn-sidebar {
    line-height: 40px;
}

.sidebar-nav li .btn-sidebar {
    display: block;
    text-decoration: none;
    color: #999999;
}

.sidebar-nav li .btn-sidebar:hover {
    text-decoration: none;
    color: #fff;
    background: rgba(255,255,255,0.2);
}

.sidebar-nav li .btn-sidebar:active,
.sidebar-nav li .btn-sidebar:focus {
    text-decoration: none;
    outline: none;
}

/*////// DataTables custom //////*/

/*For rounded table border*/
div.dataTables_scrollHead table,
div.dataTables_scrollHead th:first-child {
  border-top-left-radius: 4px;
}

/*////// Help page //////*/

.help-image {
  width: 75%;
  height: 75%;
  padding: 10px 0;
}

/*////// Progress Indicator //////*/

/* Center the progress indicator */
#db-indicator{
  position: absolute;
  left: 50%;
  top: 50%;
  z-index: 1;
  width: 150px;
  height: 150px;
  margin: -75px 0 0 -75px;
  border: 6px solid #B4DDF8;
  border-radius: 50%;
  border-top: 6px solid #3498db;
  width: 50px;
  height: 50px;
  animation: spin 1s linear infinite;
  display: none;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

#indicator-text {
  position: absolute;
  left: 50%;
  top: 50%;
  z-index: 1;
  margin: -120px 0 0 -125px;
  display: none;
}

/* Change the default color of the FontAwesome folder  */
.fa_custom {
  color: #3498db;
}

/*////// Split.js  //////*/

.gutter {
  background-color: #e8e8e8;
}

 .gutter.gutter-horizontal {
  cursor: ew-resize;
}

.gutter.gutter-vertical {
  cursor: ns-resize;
}

.split.split-horizontal,
.gutter.gutter-horizontal {
  height: 100%;
  float: left;
}

.div-hide {
  display: none;
  visibility: hidden;
}

.div-show {
  display: block;
  visibility: visible;
}

/*////// Bar Chart Summary  //////*/

.bar-chart{ width: 100%; }

.bar-chart rect { fill: #3498db; }

.bar-chart text {
  fill: black;
  font-size: 12px;
  font-family: 'Lato', Helvetica, sans-serif;
  text-anchor: end;
}

.axis path,
.axis line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}

